syntax = "proto3";
option csharp_namespace = "SystemConfig.Services";
import "google/protobuf/timestamp.proto";
package grpcSystemConfigService;
//Services
service grpcSystemConfigService {
    //GetServiceList 
    rpc GetServiceList (Empty_Request) returns (GetServiceList_Response);
    //GetSetting
    rpc GetSetting (String_Request) returns (GetSetting_Response);
}
//======================================================
// Common Messages
//======================================================
message UserCredential {
    string Username = 1;
    string RoleID = 2;
    string AccessToken = 3;
    string ApiKey = 4;
}
message Empty_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
}
message Empty_Request {
    UserCredential Credential = 1;
}
//
message String_Request
{
    UserCredential Credential = 1;
    //
     string StringValue = 2;
}
message String_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
     string StringValue = 3;
}
message Int_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
     int32 IntValue = 3;
}
//
//======================================================
// Messages
//======================================================
message GetServiceList_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcServiceListModel ServiceList = 3;
}
message grpcServiceListModel
{
    string ID = 1;
    string ServiceName = 2;
    string Descriptions = 3;
    string Host = 4;
    int32 Port = 5;
    string Url = 6;
    int32 Enable = 7;
}
message GetSetting_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    string ID = 3;
    string Code = 4;
    string Description = 5;
    string StringValue1 = 6;
    string StringValue2 = 7;
    int32 IntValue1 = 8;
    int32 IntValue2 = 9;
    double DoubleValue1 = 10;
    double DoubleValue2 = 11;
    google.protobuf.Timestamp ModifiedOn = 12;
    int32 UpdMode = 13;
}











